用户端脚手架

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
                 <!-- 左边有图标示例 -->
                 <div class="bui-btn btn-back"><i class="icon-back"></i></div>
             </div>
-            <div class="bui-bar-main">BUI单页开发工</div>
+            <div class="bui-bar-main">哈哈</div>
             <div class="bui-bar-right">
                 <!-- 右边有图标示例 -->
                 <div class="bui-btn"><i class="icon-search"></i></div>
@@ -14,7 +14,6 @@
         </div>
     </header>
     <main>
-        <div id="btn" class="bui-btn">登录</div>
         <!-- 中间内容 -->
     </main>
     <footer>
