培训页面和主页

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -1,23 +1,10 @@
-<!-- 这里还是一个标准的BUI页面 -->
+<!-- 这里还是一个标准的BUI页面 bui-box-vertical 用来解决微信IOS的前进后退历史记录问题 -->
+<style>
+
+</style>
 <div class="bui-page bui-box-vertical">
-    <header>
-        <div class="bui-bar">
-            <div class="bui-bar-left">
-                <!-- 左边有图标示例 -->
-                <div class="bui-btn btn-back"><i class="icon-back"></i></div>
-            </div>
-            <div class="bui-bar-main">BUI单页开发工</div>
-            <div class="bui-bar-right">
-                <!-- 右边有图标示例 -->
-                <div class="bui-btn"><i class="icon-search"></i></div>
-            </div>
-        </div>
-    </header>
     <main>
-        <div id="btn" class="bui-btn">登录</div>
-        <!-- 中间内容 -->
+        <div id="uiTab" class="bui-tab">
+        </div>
     </main>
-    <footer>
-        <!-- 底部内容 -->
-    </footer>
 </div>
