--- a/src/pages/task_page1/task_page1.html
+++ b/src/pages/task_page1/task_page1.html
@@ -28,7 +28,7 @@
                 <!-- 折叠菜单 -->
                 <ul class="bui-list bui-list-thumbnail"></ul>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail bui-sub"><img src="images/list-img1.png" alt=""></div>
+                    <div class="bui-thumbnail bui-sub"><img src="images/img.jpg" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">驾驶员安全运输知识培训.mp4</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -36,7 +36,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="images/img2.jpg" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="images/img.jpg" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
