--- a/src/pages/login（登录）/login.html
+++ b/src/pages/login（登录）/login.html
@@ -1,116 +1,53 @@
-<!DOCTYPE HTML>
+<div class="bui-page bui-box-vertical">
+    <header>
+       <div class="bui-bar">
+        <div class="bui-bar-left">
+            <a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
+        </div>
+        <div class="bui-bar-main">登录</div>
+       </div>
+    </header>
+    <main>
+        <div class="logo bui-box-center" style="height: 80px;">
+             
+             <h1>BUI</h1>
+          </div>
+          <div class="login-form">
+              <ul class="bui-list">
+                  <li class="bui-btn bui-box clearactive">
+                      <label class="bui-label" for="user"><i class="icon-face"></i></label>
+                      <div class="span1">
+                          <div class="bui-input user-input">
+                              <input id="user" type="text" placeholder="用户名">
+                          </div>
+                      </div>
+                  </li>
+                  <li class="bui-btn bui-box clearactive">
+                      <label class="bui-label" for="password"><i class="icon-lock"></i></label>
+                      <div class="span1">
+                          <div class="bui-input password-input">
+                              <input id="password" type="password" placeholder="密码">
+                          </div>
+                      </div>
+                  </li>
+              </ul>
+              <div class="bui-btn round primary" href="pages/main/main.html">登录</div>
+              <div class="bui-btn-text" href="pages/register/register.html">注册</div>
+              <div class="bui-btn-text">忘记密码</div>
+          </div>
+    </main>
+    <link rel="" href="login.js">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
+</div>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>登录</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
+		
         <link rel="shortcut icon" href="../../images/favicon.ico">
 		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/zepto.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
 		<style></style>
 	</head>
-	<body>
-	<style type="text/css">
-
-.login-page main{
-    background: #fff url(../images/login/login-bg.png) center bottom no-repeat;
-    background-size: 100% auto;
-
-}
-.login-page .logo h1{
-    font-size: .82rem;
-    padding-left: .3rem;
-}
-.logo{
-    height: 2rem;
-    margin: 1.2rem auto 1rem auto;
-    text-align: center;
-}
-.logo img{
-    height: 1rem;
-}
-.login-form {
-    padding-left: .6rem;
-    padding-right: .6rem;
-}
-.login-form .bui-list{
-    border-top: none;
-    margin-bottom: .7rem;
-}
-.login-form > .bui-btn{
-    margin-bottom: .3rem;
-}
-.login-form .bui-btn-text{
-    margin-bottom: .2rem;
-}
-.bui-list>[class*=bui-btn]:last-child {
-}
-.login-form .bui-label{
-    width: 0.5rem;
-    margin-right: .2rem;
-}
-.login-form .icon-face,
-.login-form .icon-lock{
-    font-size: 0.48rem;
-}
-.login-form .bui-input {
-    height: .6rem;
-    background: none;
-}
-.login-form .bui-btn-text{
-    text-align: center;
-    color: #666666;
-    font-size: 0.2rem;
-}
-.copyright{
-    font-size: 0.17rem;
-    color: #999999;
-    width: 100%;
-    text-align: center;
-    background-color: #ffffff;
-    padding-bottom: 0.25rem;
-}
-
-.icon-eye:before {
-    content: "\e680"
-}
-.icon-eye.active:before {
-    content: "\e67f"
-}
-
-</style>
-<div class="bui-page login-page">
-    <main>
-        <div class="logo bui-box-center">
-          <img src="images/applogo.png" alt=""> <h1>BUI</h1>
-        </div>
-        <div class="login-form">
-            <ul class="bui-list">
-                <li class="bui-btn bui-box clearactive">
-                    <label class="bui-label" for="user"><i class="icon-face"></i></label>
-                    <div class="span1">
-                        <div class="bui-input user-input">
-                            <input id="user" type="text" placeholder="用户名">
-                        </div>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box clearactive">
-                    <label class="bui-label" for="password"><i class="icon-lock"></i></label>
-                    <div class="span1">
-                        <div class="bui-input password-input">
-                            <input id="password" type="password" placeholder="密码">
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div class="bui-btn round primary" href="pages/main/main.html">登录</div>
-            <div class="bui-btn-text" href="pages/register/register.html">注册</div>
-            <div class="bui-btn-text">忘记密码</div>
-        </div>
-    </main>
-</div>
-
-<link rel="" href="login.js">
-</body>
 </html>
