--- a/src/pages/reset password(重置密码)/reset password.html
+++ b/src/pages/reset password(重置密码)/reset password.html
@@ -1,29 +1,9 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>忘记密码</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
-		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/zepto.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
-		<style></style>
-	</head>
-	<body>
-	<style>
-    .tips {
-        font-size: .36rem;
-    }
-    .tips .text{
-        display: block;
-    }
-</style>
 <div class="bui-page">
 	<header class="bui-bar">
 		<div class="bui-bar-left">
 			<a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
 		</div>
-		<div class="bui-bar-main">忘记密码</div>
+		<div class="bui-bar-main">步骤条</div>
 		<div class="bui-bar-right">
 		</div>
 	</header>
@@ -91,8 +71,61 @@
             </div>
         </div>
 	</main>
+    <html>
+	<head>
+		<meta charset="utf-8">
+		<title>BUI示例</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
+		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/zepto.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
+		<style></style>
+	</head>
+	<body>
+	<style>
+    .tips {
+        font-size: .36rem;
+    }
+    .tips .text{
+        display: block;
+    }
+</style>
 </div>
 
-<link rel="" href="reset password.js">
+<script>bui.ready(function(){
+//初始化控件
+    var uiStepbar = bui.stepbar({
+        id: "#step",
+        data: [{
+            title: "验证身份",
+        },{
+            title: "重置密码",
+        },{
+            title: "完成",
+        }],
+        direction: "x",
+        click: false,
+        lineCenter: true,
+        hasNumber: true
+    });
+
+    uiStepbar.on("change",function (e) {
+        $(".stepbar").hide().eq(e).show()
+    })
+    //激活第1步
+    uiStepbar.value(0);
+
+    $(".step1").on("click",function (argument) {
+        uiStepbar.next();
+    })
+    $(".step2").on("click",function (argument) {
+        uiStepbar.next();
+    })
+    $(".btn-prev-step").on("click",function (argument) {
+        uiStepbar.prev();
+    })
+})
+
+</script>
 </body>
 </html>
