修改各种奇怪问题

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -37,10 +37,8 @@
               <div class="bui-btn-text">忘记密码</div>
           </div>
     </main>
-    <link rel="" href="login.js">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
 </div>
-<html>
+<!-- <html>
 	<head>
 		<meta charset="utf-8">
 		<title>登录</title>
@@ -51,4 +49,4 @@
 		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
 		<style></style>
 	</head>
-</html>
+</html> -->
