--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -42,6 +42,7 @@
             <div class="bui-tab-main">
                 <ul>
                     <li>
+                        1231245123
                         <!-- 课程tab -->
                     </li>
                     <li>
@@ -63,7 +64,7 @@
     </main>
     <footer>
         <ul id="tabDynamicNav" class="bui-nav main-footer">
-            <li class="bui-btn bui-box-vertical" href="pages/main/live.html">
+            <li class="bui-btn bui-box-vertical" href="pages/lesson/lesson.html">
                 <i class="icon-weixin">&#xe678;</i>
                 <div class="span1">课程</div>
             </li>
