--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -128,8 +128,8 @@
             </li>
         </ul>
         <div class="btn-list">
-            <div class="bui-btn primary round">切换账号</div>
-            <div class="bui-btn primary round">退出登录</div>
+            <a class="bui-btn primary round">切换账号</a>
+            <a class="bui-btn primary round" href="/pages/login/login">退出登录</a>
         </div>
 
     </main>
