--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -112,15 +112,21 @@
                 <i class="icon-listright"></i>
             </li>
             <li class="bui-btn bui-box">
-                <div class="icon"><i class="icon icon-green">&#xe603;</i></div>
-                <div class="span1">联系客服</div>
-                <i class="icon-listright"></i>
-            </li>
-            <li class="bui-btn bui-box">
                 <div class="icon"><i class="icon icon-red">&#xe657;</i></div>
                 <div class="span1">授权码激活</div>
                 <i class="icon-listright"></i>
             </li>
+            <li class="bui-btn bui-box">
+                <div class="icon"><i class="icon icon-thinblue">&#xe678;</i></div>
+                <div class="span1">我的课程</div>
+                <i class="icon-listright"></i>
+            </li>
+            <li class="bui-btn bui-box">
+                <div class="icon"><i class="icon icon-green">&#xe603;</i></div>
+                <div class="span1">联系客服</div>
+                <i class="icon-listright"></i>
+            </li>
+
             <li class="bui-btn bui-box">
                 <div class="icon"><i class="icon icon-yellow">&#xe622;</i></div>
                 <div class="span1">版本说明</div>
