登录 注册 忘记密码的页面修改合并

--- a/src/pages/reset/reset.html
+++ b/src/pages/reset/reset.html
@@ -1,9 +1,17 @@
+<style>
+    .tips {
+        font-size: .36rem;
+    }
+    .tips .text{
+        display: block;
+    }
+</style>
 <div class="bui-page">
 	<header class="bui-bar">
 		<div class="bui-bar-left">
 			<a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
 		</div>
-		<div class="bui-bar-main">忘记密码</div>
+		<div class="bui-bar-main">步骤条</div>
 		<div class="bui-bar-right">
 		</div>
 	</header>
@@ -72,27 +80,3 @@
         </div>
 	</main>
 </div>
-
-<link rel="" href="reset password.js">
-</body>
-</html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>忘记密码</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
-		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/zepto.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
-		<style></style>
-	</head>
-	<body>
-	<style>
-    .tips {
-        font-size: .36rem;
-    }
-    .tips .text{
-        display: block;
-    }
-</style>
-
