--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,21 +1,16 @@
-<div class="bui-page bui-box-vertical">
-    <header>
-       <div class="bui-bar">
-        <div class="bui-bar-left">
-            <a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
+<div class="bui-page register-page">
+    <header class="bui-bar">
+        <div class="bui-bar">
+            <div class="bui-bar-left">
+                <a class="bui-btn btn-back"><i class="icon-back"></i></a>
+            </div>
+            <div class="bui-bar-main">注册</div>
+            <div class="bui-bar-right">
+            </div>
         </div>
-        <div class="bui-bar-main">注册</div>
-        <meta charset="utf-8">
-		<title>注册</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.css">
-		<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/zepto.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/buijs@latest/lib/latest/bui.js"></script>
-        <link rel="" href="register.js">
-       </div>
     </header>
     <main>
-        <!-- 正文内容 --><div class="section-title">请填写信息</div>
+        <div class="section-title">请填写信息</div>
         <ul class="bui-list">
             <li class="bui-btn bui-box clearactive">
                 <label class="bui-label" for="phonenumber">手机号:</label>
@@ -45,5 +40,5 @@
           <div class="bui-btn round primary" href="pages/msg/msg.html">注册</div>
         </div>
     </main>
-</div>
 
+</div>
