修改了home页轮播图的bug

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -890,7 +890,7 @@
         <div class="bui-bar-right bui-bar-text"></div>
     </header>
     <main>
-        <div id="slide" class="bui-slide">
+        <div id="slide1" class="bui-slide">
             <div class="bui-slide-main">
                 <ul>
                     <li>
