video_detail，个人采集，授权码静态

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/bui.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/video-js.min.css"/>
 </head>
 
 <body>
@@ -16,6 +17,7 @@
 
     <script src="js/zepto.js"></script>
     <script src="js/bui.js"></script>
+    <script src="js/video.min.js"></script>
     <!-- 初始化单页 -->
     <script src="index.js"></script>
 </body>
