feat: 接口对接示例

--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -150,7 +150,7 @@
                     <div class="span1" id="uiSlideNavbar">
                         <ul id="uiNewsTabNav" class="bui-nav">
                             <li class="bui-btn">载货汽车</li>
-                            <li class="bui-btn">公交车</li>
+                            <!-- <li class="bui-btn">公交车</li>
                             <li class="bui-btn">出租车</li>
                             <li class="bui-btn">自卸汽车</li>
                             <li class="bui-btn">客车</li>
@@ -159,7 +159,7 @@
                             <li class="bui-btn">财经</li>
                             <li class="bui-btn">科技</li>
                             <li class="bui-btn">汽车</li>
-                            <li class="bui-btn">时尚</li>
+                            <li class="bui-btn">时尚</li> -->
                         </ul>
                     </div>
                 </div>
