--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -72,7 +72,7 @@
                         <label class="bui-label" for="user"><i class="icon-face"></i></label>
                         <div class="span1">
                             <div class="bui-input user-input">
-                                <input id="user" type="text" placeholder="用户名">
+                                <input id="phone" type="text" placeholder="手机号">
                             </div>
                         </div>
                     </li>
