fix:修复了同id组件冲突的bug

--- a/src/pages/task/task.html
+++ b/src/pages/task/task.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <!-- 正文内容 -->
-        <div id="uiTabHead" class="bui-tab"></div>
+        <div id="uiTabHeadTask" class="bui-tab"></div>
     </main>
     <footer>
         <!-- 底部内容 -->
