--- a/src/pages/train/train.html
+++ b/src/pages/train/train.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <!-- 正文内容 -->
-        <div id="uiTabHead" class="bui-tab">
+        <div id="uiTabHeadTrain" class="bui-tab">
 
         </div>
     </main>
