--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -135,7 +135,7 @@
         </ul>
         <div class="btn-list">
             <a class="bui-btn primary round">切换账号</a>
-            <a class="bui-btn primary round" href="/pages/login/login">退出登录</a>
+            <a class="bui-btn primary round" id="lgout">退出登录</a>
         </div>
 
     </main>
