fix:修改了一些小问题，添加了一些跳转

--- a/src/pages/task_page1/task_page1.html
+++ b/src/pages/task_page1/task_page1.html
@@ -60,7 +60,7 @@
             <dd>
                 <ul class="bui-list bui-list-thumbnail"></ul>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -68,7 +68,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -76,7 +76,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -84,7 +84,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -92,7 +92,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
@@ -100,7 +100,7 @@
                     </div>
                 </li>
                 <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/list-img2.png" alt=""></div>
+                    <div class="bui-thumbnail"><img src="" alt=""></div>
                     <div class="span1">
                         <h3 class="item-title">河南安阳离奇交通事故</h3>
                         <p class="item-text">2021-01-01 - 2021-06-01</p>
