--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -101,7 +101,7 @@
             <p class="name">王小o</p>
         </div>
         <ul class="bui-list nav-list">
-            <li class="bui-btn bui-box ">
+            <li class="bui-btn bui-box" id="btn-myMessage">
                 <div class="icon"><i class="icon icon-yellow">&#xe67b;</i></div>
                 <div class="span1">个人中心</div>
                 <i class="icon-listright"></i>
@@ -111,7 +111,7 @@
                 <div class="span1">个人采集</div>
                 <i class="icon-listright"></i>
             </li>
-            <li class="bui-btn bui-box">
+            <li class="bui-btn bui-box" id="btn-cdk">
                 <div class="icon"><i class="icon icon-red">&#xe657;</i></div>
                 <div class="span1">授权码激活</div>
                 <i class="icon-listright"></i>
