--- a/src/pages/cdk/cdk.html
+++ b/src/pages/cdk/cdk.html
@@ -18,10 +18,10 @@
             <div class="bui-btn bui-box clearactive">
                 <div class="span1">
                     <div class="bui-input user-input">
-                        <input id="user" type="text" placeholder="请输入授权码">
+                        <input id="cdk" type="text" placeholder="请输入授权码">
                     </div>
             </div>
-            <span class="bui-btn mini primary round">确认</span>             
+            <span id="exchange" class="bui-btn mini primary round">确认</span>             
         </div>  
         </div>
     </main>
