--- a/src/pages/video_detail/detail.html
+++ b/src/pages/video_detail/detail.html
@@ -124,6 +124,11 @@
                     that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a> </p>
             </video>
         </div>
+        <div id="box">
+            <video id="media" autoplay></video>
+            <button id="capture">点击抓拍</button>
+          </div>
+          <canvas id="canvas" width="480" height="320"></canvas>
         <h2 id="name">安全知识.mp4</h2>
         <div id="section">
             <h3>视频简介</h3>
