--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -134,7 +134,7 @@
             </li>
         </ul>
         <div class="btn-list">
-            <a class="bui-btn primary round">切换账号</a>
+            <a class="bui-btn primary round" id="jump">切换账号</a>
             <a class="bui-btn primary round" id="lgout">退出登录</a>
         </div>
 
