--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -892,21 +892,14 @@
     <main>
         <div id="slide1" class="bui-slide">
             <div class="bui-slide-main">
-                <ul>
+                <ul id="silde1_ul">
                     <li>
                         <div class="bui-slide-img">
                             <img src="http://www.easybui.com/demo/images/banner01.png">
                         </div>
                     </li>
                     <li style="display: none;">
-                        <div class="bui-slide-img">
-                            <img src="http://www.easybui.com/demo/images/banner02.png">
-                        </div>
-                    </li>
-                    <li style="display: none;">
-                        <div class="bui-slide-img">
-                            <img src="http://www.easybui.com/demo/images/banner03.png">
-                        </div>
+                        <div class="bui-slide-img"><img src="https://sincelibrary.oss-cn-shanghai.aliyuncs.com/test/users/20220202/793612ee7fd34825b5566730abf27c42.jpg"></div>
                     </li>
                 </ul>
             </div>
