--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -86,7 +86,8 @@
         display: flex;
     }
     
-    .round {
+    .btn-min-switch,
+    .btn-min-lgout {
         /* float: left; */
         width: 30%;
         border-radius: 0.2rem;
@@ -134,8 +135,8 @@
             </li>
         </ul>
         <div class="btn-list">
-            <a class="bui-btn primary round">切换账号</a>
-            <a class="bui-btn primary round" id="lgout">退出登录</a>
+            <a class="bui-btn primary round btn-min-switch">切换账号</a>
+            <a class="bui-btn primary round btn-min-lgout" id="lgout">退出登录</a>
         </div>
 
     </main>
