--- a/src/pages/train_page2/train_page2.html
+++ b/src/pages/train_page2/train_page2.html
@@ -141,7 +141,7 @@
                 <div class="divider"></div>
                 <div class="item-right bui-align-center">
                     <span class="details">30人已报名</span>
-                    <div class="bui-btn primary mini ring">签到</div>
+                    <div class="bui-btn primary mini ring" id="signInForTrain">签到</div>
                 </div>
             </li>
             <li class="bui-btn bui-box-center coupon-item">
@@ -153,7 +153,7 @@
                 <div class="divider"></div>
                 <div class="item-right bui-align-center">
                     <span class="details">43人已报名</span>
-                    <div class="bui-btn primary mini ring">签退</div>
+                    <div class="bui-btn primary mini ring" id="signOutForTrain">签退</div>
                 </div>
             </li>
         </ul>
