--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -141,7 +141,7 @@
         <div class="bui-bar-right">
         </div>
     </header>
-    <main>
+    <main id="lesson-main">
         <!-- 正文内容 -->
         <div id="slide" class="bui-slide bui-slide-skin01"></div>
         <div class="tab-home">
@@ -149,17 +149,7 @@
                 <div class="bui-navbar bui-box-align-middle">
                     <div class="span1" id="uiSlideNavbar">
                         <ul id="uiNewsTabNav" class="bui-nav">
-                            <li class="bui-btn">载货汽车</li>
-                            <!-- <li class="bui-btn">公交车</li>
-                            <li class="bui-btn">出租车</li>
-                            <li class="bui-btn">自卸汽车</li>
-                            <li class="bui-btn">客车</li>
-                            <li class="bui-btn">牵引汽车</li>
-                            <li class="bui-btn">半挂牵引汽车</li>
-                            <li class="bui-btn">财经</li>
-                            <li class="bui-btn">科技</li>
-                            <li class="bui-btn">汽车</li>
-                            <li class="bui-btn">时尚</li> -->
+                            <!-- 标签栏 -->
                         </ul>
                     </div>
                 </div>
