--- a/src/pages/train_page1/train_page1.html
+++ b/src/pages/train_page1/train_page1.html
@@ -141,7 +141,7 @@
                 <div class="divider"></div>
                 <div class="item-right bui-align-center">
                     <span class="details">30人已报名</span>
-                    <div class="bui-btn primary mini ring">立即报名</div>
+                    <div class="bui-btn primary mini ring" id="signUpForTrain">立即报名</div>
                 </div>
             </li>
             <li class="bui-btn bui-box-center coupon-item">
