fix:lesson页面对接的更新

--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -121,6 +121,10 @@
         margin-right: .1rem;
         color: #999
     }
+    
+    .bgcWhite {
+        background-color: #fff;
+    }
 </style>
 <div class="bui-page home-page">
     <header class="bui-bar">
