feat: 登录、注册、修改密码视频详情

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -61,10 +61,10 @@
 }
 
 </style> 
-    <div class="bui-page login-page">
+    <div class="bui-page login-page" style="background-color: #ffffff;color: #333;">
         <main>
             <div class="logo bui-box-center">
-               <h1>BUI</h1>
+               <h1>道平安</h1>
             </div>
             <div class="login-form">
                 <ul class="bui-list">
