--- a/src/pages/reset/reset.html
+++ b/src/pages/reset/reset.html
@@ -11,7 +11,7 @@
 		<div class="bui-bar-left">
 			<a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
 		</div>
-		<div class="bui-bar-main">步骤条</div>
+		<div class="bui-bar-main">忘记密码</div>
 		<div class="bui-bar-right">
 		</div>
 	</header>
@@ -25,20 +25,20 @@
                         <label class="bui-label" for="phonenumber">手机号:</label>
                         <div class="span1">
                             <div class="bui-input user-input">
-                                <input id="phonenumber" type="number" class="bui-input" value="" placeholder="请输入手机号">
+                                <input id="phonenumber" type="number" class="bui-input" value="" b-model="page.phone" placeholder="请输入手机号">
                             </div>
                         </div>
                     </li>
                     <li class="bui-btn bui-box clearactive">
                         <label class="bui-label">验证码:</label>
                         <div class="span1">
-                            <input type="text" class="bui-input" value="" placeholder="请输入验证码" maxlength="4">
+                            <input type="text" class="bui-input" value="" placeholder="请输入验证码" b-model="page.code" maxlength="4">
                         </div>
-                        <div class="bui-btn primary-reverse mini ring" id="btnSend">发送验证码</div>
+                        <div class="bui-btn primary-reverse mini ring" id="btnSend" b-click="page.sendQr">发送验证码</div>
                     </li>
                 </ul>
                 <div class="container-xy">
-                    <div class="bui-btn round primary step1">提交</div>
+                    <div class="bui-btn round primary step1" b-click="page.nextTo">提交</div>
                 </div>
             </div>
             <div class="stepbar" style="display: none;">
@@ -47,7 +47,7 @@
                         <label class="bui-label" for="phonenumber">密码:</label>
                         <div class="span1">
                             <div class="bui-input user-input">
-                                <input id="phonenumber" type="number" class="bui-input" value="" placeholder="请输入手机号">
+                                <input id="phonenumber" type="password" class="bui-input" value="" b-model="page.password" placeholder="请输入密码">
                             </div>
                         </div>
                     </li>
@@ -55,13 +55,13 @@
                         <label class="bui-label" for="password">确认密码:</label>
                         <div class="span1">
                             <div id="passwordInput" class="bui-input">
-                                <input id="password" type="password" placeholder="请输入密码">
+                                <input id="password" type="password" value="" placeholder="请输入再次密码" b-model="page.tpassword" >
                             </div>
                         </div>
                     </li>
                 </ul>
                 <div class="container-xy">
-                    <div class="bui-btn round primary step2">确定修改</div>
+                    <div class="bui-btn round primary step2" b-click="page.changePass">确定修改</div>
                 </div>
             </div>
             <div class="stepbar" style="display: none;">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="container-xy bui-interval">
                     <div class="bui-btn primary round btn-back">返回上一页</div>
-                    <div class="bui-btn round btn-prev-step">返回上一步</div>
+                    <!-- <div class="bui-btn round btn-prev-step">返回上一步</div> -->
                 </div>
             </div>
         </div>
