--- a/src/pages/video_detail/detail.html
+++ b/src/pages/video_detail/detail.html
@@ -116,16 +116,11 @@
             <video id="video" class="pic" style="width:80px;height: 80px;"></video>
         </div>
         <div id="videoDetail">
-            <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline="true"
-                poster="m.jpg" data-setup="{}">
-                <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-                <p class="vjs-no-js"> To view this video please enable JavaScript, and consider upgrading to a web
-                    browser
-                    that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a> </p>
+            <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline="true" data-setup="{}">
+                <!-- <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4"> -->
             </video>
         </div>
-        <video id="video" width="500" height="500"></video>
-        <canvas id="canvas" width="500" height="500"></canvas>
+        <canvas id="canvas"></canvas>
         <h2 id="name">安全知识.mp4</h2>
         <div id="section">
             <h3>视频简介</h3>
