修改视频显示

--- a/src/pages/video_detail/detail.html
+++ b/src/pages/video_detail/detail.html
@@ -116,9 +116,9 @@
             <video id="video" class="pic" style="width:80px;height: 80px;"></video>
         </div>
         <div id="videoDetail">
-            <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline="true" data-setup="{}">
-                <!-- <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4"> -->
-            </video>
+            <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" playsinline="true" data-setup="{}" poster="">
+                <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+           </video>
         </div>
         <canvas id="canvas"></canvas>
         <h2 id="name">安全知识.mp4</h2>
