测试视频横屏全屏

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <script src="js/zepto.js"></script>
     <script src="js/bui.js"></script>
     <script src="js/video.min.js"></script>
+    <script src="js/videojs-landscape-fullscreen.min.js"></script>
     <!-- 初始化单页 -->
     <script src="index.js"></script>
 </body>
