feat:task页面的对接

--- a/src/pages/task_page2/task_page2.html
+++ b/src/pages/task_page2/task_page2.html
@@ -19,10 +19,13 @@
 <div class="bui-page bui-box-vertical">
     <main>
         <!-- 正文内容 -->
-        <div class="empty">
+        <dl id="accordion2" class="bui-accordion">
+
+        </dl>
+        <!-- <div class="empty">
             <img src="https://s4.ax1x.com/2022/02/08/H3l6FP.png" class="empty-image">
             <div class="text">您目前没有任务哦~</div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <!-- 底部内容 -->
