--- a/src/pages/task_page1/task_page1.html
+++ b/src/pages/task_page1/task_page1.html
@@ -18,14 +18,12 @@
 <div class="bui-page">
     <main>
         <dl id="accordion" class="bui-accordion">
-            <dt class="bui-btn bui-box">
+            <!-- <dt class="bui-btn bui-box">
 				<div class="span1">郑州营运安全</div>
                 <div class="color_yellow">进行中</div>
 				<i class="icon-accordion"></i>
-               
 			</dt>
             <dd>
-                <!-- 折叠菜单 -->
                 <ul class="bui-list bui-list-thumbnail"></ul>
                 <li class="bui-btn bui-box">
                     <div class="bui-thumbnail bui-sub"><img src="images/img1.jpg" alt=""></div>
@@ -43,72 +41,9 @@
                         <p class="item-text text-noover">00:00:00</p>
                     </div>
                 </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="images/img.jpg" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
+
                 </ul>
-            </dd>
-            <dt class="bui-btn bui-box">
-				<div class="span1">洛阳营运安全</div>
-				<i class="icon-accordion"></i>
-			</dt>
-            <dd>
-                <ul class="bui-list bui-list-thumbnail"></ul>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                <li class="bui-btn bui-box">
-                    <div class="bui-thumbnail"><img src="" alt=""></div>
-                    <div class="span1">
-                        <h3 class="item-title">河南安阳离奇交通事故</h3>
-                        <p class="item-text">2021-01-01 - 2021-06-01</p>
-                        <p class="item-text text-noover">00:00:00</p>
-                    </div>
-                </li>
-                </ul>
-            </dd>
+            </dd> -->
         </dl>
 
 
