--- a/src/pages/task_page3/task_page3.html
+++ b/src/pages/task_page3/task_page3.html
@@ -19,11 +19,13 @@
 <div class="bui-page bui-box-vertical">
     <main>
         <!-- 正文内容 -->
-        <div class="empty">
-            <img src="https://s4.ax1x.com/2022/02/08/H3l6FP.png" alt="" class="empty-image">
-            <div class="text">您目前没有任务哦~</div>
-        </div>
+        <dl id="accordion3" class="bui-accordion">
 
+        </dl>
+        <!-- <div class="empty">
+            <img src="https://s4.ax1x.com/2022/02/08/H3l6FP.png" class="empty-image">
+            <div class="text">您目前没有任务哦~</div>
+        </div> -->
     </main>
     <footer>
         <!-- 底部内容 -->
