--- a/src/pages/train_page1/train_page1.html
+++ b/src/pages/train_page1/train_page1.html
@@ -131,30 +131,8 @@
 </style>
 <div class="bui-page couponCenter-page">
     <main>
-        <ul class="bui-list container-x coupon-list">
-            <li class="bui-btn bui-box-center coupon-item">
-                <div class="span1 item-content">
-                    <h3 class="item-title bui-text-hide">驾驶员安全运输知识培训</h3>
-                    <p class="item-text bui-box-text-hide">河南省-郑州市</p>
-                    <p class="time">2018.01.10-2019.11.11</p>
-                </div>
-                <div class="divider"></div>
-                <div class="item-right bui-align-center">
-                    <span class="details">30人已报名</span>
-                    <div class="bui-btn primary mini ring" id="signUpForTrain">立即报名</div>
-                </div>
-            </li>
-            <li class="bui-btn bui-box-center coupon-item">
-                <div class="span1 item-content">
-                    <h3 class="item-title bui-text-hide">大货车司机安全培训</h3>
-                    <p class="item-text bui-box-text-hide">河南省-郑州市</p>
-                    <p class="time">2018.01.10-2019.11.11</p>
-                </div>
-                <div class="divider"></div>
-                <div class="item-right bui-align-center">
+        <ul class="bui-list container-x coupon-list" id="trainList1">
 
-                </div>
-            </li>
         </ul>
     </main>
     <footer>
