fix: 修复个人采集bug

--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -97,7 +97,7 @@
     <main>
         <div class="personal-header" style="width: auto">
             <div class="personal-img">
-                <img b-bind:src="page.image">
+                <img b-src="page.image">
             </div>
             <p class="name" b-text="page.name"></p>
         </div>
