feat:train页面的一部分对接 增加了task页面的跳转

--- a/src/pages/train_page2/train_page2.html
+++ b/src/pages/train_page2/train_page2.html
@@ -131,31 +131,8 @@
 </style>
 <div class="bui-page couponCenter-page">
     <main>
-        <ul class="bui-list container-x coupon-list">
-            <li class="bui-btn bui-box-center coupon-item">
-                <div class="span1 item-content">
-                    <h3 class="item-title bui-text-hide">驾驶员安全运输知识培训</h3>
-                    <p class="item-text bui-box-text-hide">河南省-郑州市</p>
-                    <p class="time">2018.01.10-2019.11.11</p>
-                </div>
-                <div class="divider"></div>
-                <div class="item-right bui-align-center">
-                    <span class="details">30人已报名</span>
-                    <div class="bui-btn primary mini ring" id="signInForTrain">签到</div>
-                </div>
-            </li>
-            <li class="bui-btn bui-box-center coupon-item">
-                <div class="span1 item-content">
-                    <h3 class="item-title bui-text-hide">驾驶员安全运输知识培训</h3>
-                    <p class="item-text bui-box-text-hide">河南省-郑州市</p>
-                    <p class="time">2018.01.10-2019.11.11</p>
-                </div>
-                <div class="divider"></div>
-                <div class="item-right bui-align-center">
-                    <span class="details">43人已报名</span>
-                    <div class="bui-btn primary mini ring" id="signOutForTrain">签退</div>
-                </div>
-            </li>
+        <ul class="bui-list container-x coupon-list" id="trainList2">
+
         </ul>
     </main>
     <footer>
