本地存储修改

--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -116,7 +116,7 @@
     }
 </style>
 <div class="bui-page home-page">
-    <header class="bui-bar">
+    <!-- <header class="bui-bar">
         <div class="bui-bar-main">
             <div id="searchbar" class="bui-searchbar bui-box">
                 <div id="uiDoropdownArea" class="bui-dropdown">
@@ -133,7 +133,7 @@
         </div>
         <div class="bui-bar-right">
         </div>
-    </header>
+    </header> -->
     <main id="lesson-main">
         <!-- 正文内容 -->
         <div id="slide" class="bui-slide bui-slide-skin01"></div>
