--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -71,10 +71,10 @@
                 <i class="icon-weixin">&#xe665;</i>
                 <div class="span1">任务</div>
             </li>
-            <li class="bui-btn btn-home bui-box-vertical" href="pages/home/home.html">
+            <!-- <li class="bui-btn btn-home bui-box-vertical" href="pages/home/home.html">
                 <i class="icon-home big-icon"></i>
                 <span class="layer1"></span><span class="layer2"></span>
-            </li>
+            </li> -->
             <li class="bui-btn bui-box-vertical" href="pages/train/train.html">
                 <i class="icon-weixin">&#xe628;</i>
                 <div class="span1">培训</div>
