--- a/src/pages/ppt/ppt.html
+++ b/src/pages/ppt/ppt.html
@@ -3,7 +3,7 @@
         <!-- 固定顶部区 -->
         <div class="bui-bar">
             <div class="bui-bar-left">
-                <a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
+                <a class="bui-btn" onclick="bui.back(function(){window.location.reload()});"><i class="icon-back"></i></a>
             </div>
             <div class="bui-bar-main">课件学习</div>
             <div class="bui-bar-right">
